[project]
name = "quickbooks-mcp-server"
version = "0.1.0"
description = "An MCP server that interacts with all QuickBooks public APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.4.1",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
]

[project.scripts]
quickbooks-mcp-server = "quickbooks_mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quickbooks_mcp_server"]

[tool.hatch.build.targets.wheel.shared-data]
"quickbooks_openapi_schema.json" = "quickbooks_mcp_server/quickbooks_openapi_schema.json" 